cambios en todo el API Rest

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
-MYSQL_ADDON_HOST=bayd1pq9zidxtmfxk8sy-mysql.services.clever-cloud.com
-MYSQL_ADDON_DB=bayd1pq9zidxtmfxk8sy
-MYSQL_ADDON_USER=ulx34pakwvicbfeh
-MYSQL_ADDON_PORT=3306
-MYSQL_ADDON_PASSWORD=9zCMtzodRwA1vu4A5z6D 
-MYSQL_ADDON_URI=mysql://ulx34pakwvicbfeh:9zCMtzodRwA1vu4A5z6D@bayd1pq9zidxtmfxk8sy-mysql.services.clever-cloud.com:3306/bayd1pq9zidxtmfxk8sy
+MYSQL_ADDON_HOST=academia-geek-do-user-11263132-0.b.db.ondigitalocean.com
+MYSQL_ADDON_DB=defaultdb
+MYSQL_ADDON_USER=doadmin
+MYSQL_ADDON_PORT=25060
+MYSQL_ADDON_PASSWORD=NvhqcW6epmclSs3C 
+MYSQL_ADDON_URI=mysql://doadmin:NvhqcW6epmclSs3C@academia-geek-do-user-11263132-0.b.db.ondigitalocean.com:25060/defaultdb?ssl-mode=REQUIRED
 PORT=5000
