--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "connect-multiparty": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
